# curio

./: .claudeignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RUN.md  docker-compose.yml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: assistant.py  auth.py  bookexport.py  coach.py  config.py  content.py  engine.py  errorlog.py  images.py  library.py  main.py  models.py  modes.py  render.py  store.py  transcribe.py  uploads.py  urlfetch.py
api/curio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/scripts/: gen_sample.py  make_deck.py
deploy/: DEPLOY.md  nginx-curio.conf
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/knowledge/: article-evening.html  article-focus.html  article-worksheet.html  feuerstein-checklist.html  feuerstein-functions.html  one-diagram.html  onepage-traffic-jam.html  value-infographic.html  working-paper.html
frontend/src/: App.tsx  index.css  index.css.bak  main.tsx  types.ts
frontend/src/components/: AskCurio.tsx  BenchmarkRadars.tsx  BrainChild.tsx  CogPanel.tsx  EvaluatePanel.tsx  EvolutionChart.tsx  Flipbook.tsx  GanttChart.tsx  GrowthFlow.tsx  GrowthSpine.tsx  IntelligencePanel.tsx  IssuesTimeline.tsx  KnowledgePanel.tsx  LoadGate.tsx  NeedsPanel.tsx  PageHero.tsx  PlanTracker.tsx  ProfileWheel.tsx  ProgressReport.tsx  RadarChart.tsx  ReviewExport.tsx  ReviewPanel.tsx  ValueTiles.tsx  art.tsx  cogPanel.css  heroArt.tsx  ui.tsx
frontend/src/lib/: ai.ts  api.ts  auth.ts  brand.ts  curateTopics.ts  devstore.ts  dictation.ts  (+17 more)
(+30 files in other folders)
